# TDS-PROJECT

./: LICENSE  README.md  api.py  main.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  qa_engine.py  requirements.txt  schemas.py  vercel.json
data/: posts.json
scraper/: discoruse_scraper.py
